syntax = "proto3";

option go_package = "github.com/rambollwong/rainbowbee/core/crypto/pb";

package crypto.pb;

enum KeyType {
  RSA = 0;
  Ed25519 = 1;
  Secp256k1 = 2;
  ECDSA = 3;
}

message PublicKey {
  KeyType Type = 1;
  bytes Data = 2;
}

message PrivateKey {
  KeyType Type = 1;
  bytes Data = 2;
}